--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "duoshuo/phpssdb",
+	"name": "ssdb/phpssdb",
 	"description": "SSDB PHP Client",
 	"minimum-stability": "stable",
 	"license": "MIT",
@@ -7,10 +7,14 @@
 		{
 			"name": "Shen Zhenyu",
 			"email": "zhenyupku@gmail.com"
+		},
+		{
+			"name": "ideawu",
+			"email": "ideawu@163.com"
 		}
 	],
 	"require": {
-		"php": ">=5.4.0"
+		"php": ">=5.3.0"
 	},
 	"autoload": {
 		"psr-4": { "SSDB\\": "src/" }
